Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-12852

growing a PFL file with last stripe as -1 fails

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.14.0, Lustre 2.12.5
    • Lustre 2.10.8
    • None
    • 2
    • 9223372036854775807

      If a file/dir is striped with last stripe count set to -1 growing the file fails.

      $  lfs setstripe -E 256M -c 1 -E 16G -c 4 -E -1 -S 4M -c -1 pfldir
      $  echo hello > pfldir/test
      $ echo helpo >> pfldir/test 
      -bash: echo: write error: No space left on device
      
      $  lfs getstripe pfldir/test
      pfldir/test
        lcm_layout_gen:    3
        lcm_mirror_count:  1
        lcm_entry_count:   3
          lcme_id:             1
          lcme_mirror_id:      0
          lcme_flags:          init
          lcme_extent.e_start: 0
          lcme_extent.e_end:   268435456
            lmm_stripe_count:  1
            lmm_stripe_size:   1048576
            lmm_pattern:       raid0
            lmm_layout_gen:    0
            lmm_stripe_offset: 313
            lmm_objects:
            - 0: { l_ost_idx: 313, l_fid: [0x101390000:0x110967ab:0x0] }
      
          lcme_id:             2
          lcme_mirror_id:      0
          lcme_flags:          0
          lcme_extent.e_start: 268435456
          lcme_extent.e_end:   17179869184
            lmm_stripe_count:  4
            lmm_stripe_size:   1048576
            lmm_pattern:       raid0
            lmm_layout_gen:    0
            lmm_stripe_offset: -1
      
          lcme_id:             3
          lcme_mirror_id:      0
          lcme_flags:          0
          lcme_extent.e_start: 17179869184
          lcme_extent.e_end:   EOF
            lmm_stripe_count:  -1
            lmm_stripe_size:   4194304
            lmm_pattern:       raid0
            lmm_layout_gen:    0
            lmm_stripe_offset: -1
      
      $  lfs setstripe -E 256M -c 1 -E 16G -c 4 -E -1 -S 4M -c 10 pfldir
      $  echo hello > pfldir/test
      $  echo helpo >> pfldir/test 
      
      This worked.
      

        1. r417i2n16.out
          276 kB
        2. mdt.debug.gz
          147.23 MB
        3. mdt.pid.34027.out.gz
          167 kB
        4. r417i2n16.debug2.out.gz
          36 kB

            emoly.liu Emoly Liu
            mhanafi Mahmoud Hanafi
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: